Simple header and footer

--- a/HTML/basic_nav.html
+++ b/HTML/basic_nav.html
@@ -1,30 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="nav.css">
     <title>Document</title>
-</head>
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-        color: white;
-    }
-    nav{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        background-color: blue;
-    }
-</style>
-<body>
+  </head>
+  <body>
+
+
+    <!-- Nav  -->
     <nav>
-        <h3><img src="" alt=""></h3>
-        <div class="links">
-            <a href="#">Dum</a><a href="#">Dum</a><a href="#">Dum</a><a href="#">Dum</a>
-        </div>
+      <img src="google.png" alt="" />
+      <div class="name">MY SHOP</div>
+      <div class="links">
+        <a href="#">Home</a>
+        <a href="#">Blog</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
     </nav>
-</body>
+
+<!-- Nav Ends Here -->
+
+
+
+
+    <!-- Footer starts here -->
+    <footer >
+        <div id="footer">
+        <div id="footer_aside_2">
+            <ul>
+                <li>Home</li>
+                <li>Blog</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div id="footer_aside_2">
+            <ul>
+                <li>Home</li>
+                <li>Blog</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div id="footer_aside_2">
+            <ul>
+                <li>Home</li>
+                <li>Blog</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div id="footer_aside_4">
+            <ul>
+                <div class="footer_article">
+                    <img src="google.png" alt="">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
+                </div>
+                <div class="footer_article">
+                    <img src="google.png" alt="">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
+                </div>
+                <div class="footer_article">
+                    <img src="google.png" alt="">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
+                </div>
+                <div class="footer_article">
+                    <img src="google.png" alt="">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
+                </div>
+            </ul>
+        </div>
+    </div>
+        <div class="footer_2">
+            <p>Copyright - 2024</p>
+        </div>
+    </footer>
+  </body>
 </html>
