--- a/HTML/basic_nav.html
+++ b/HTML/basic_nav.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="nav.css" />
     <title>Document</title>
   </head>
   <body>
-
-
     <!-- Nav  -->
     <nav>
       <img src="google.png" alt="" />
@@ -20,63 +18,101 @@
         <a href="#">Contact</a>
       </div>
     </nav>
+    <!-- Nav Ends Here -->
 
-<!-- Nav Ends Here -->
+    <header>
+        <h1>This is my Page Content</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique repellendus, voluptatum laudantium quod neque nemo! Eaque alias exercitationem iusto praesentium quasi explicabo impedit dolorem nihil quod, ut voluptas ducimus.</p>
+    </header>
 
 
-
+    <!-- Section starts here  -->
+    <section class="sec">
+      <article>
+        <div class="article-1">
+            <img src="travel.avif" alt="">
+            <div class="content">
+                <h3 class="atricle-1-head">My Heading</h3>
+                <p class="atricle-1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis natus distinctio necessitatibus autem aliquam animi repellat officia dolore ipsam pariatur. Voluptate optio repellendus vitae earum quis delectus mollitia facilis ab.</p>
+            </div>
+        </div>
+        <div class="article-1">
+            <img src="travel.avif" alt="">
+            <div class="content">
+                <h3 class="atricle-1-head">My Heading</h3>
+                <p class="atricle-1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis natus distinctio necessitatibus autem aliquam animi repellat officia dolore ipsam pariatur. Voluptate optio repellendus vitae earum quis delectus mollitia facilis ab.</p>
+            </div>
+        </div>
+        <div class="article-1">
+            <img src="travel.avif" alt="">
+            <div class="content">
+                <h3 class="atricle-1-head">My Heading</h3>
+                <p class="atricle-1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis natus distinctio necessitatibus autem aliquam animi repellat officia dolore ipsam pariatur. Voluptate optio repellendus vitae earum quis delectus mollitia facilis ab.</p>
+            </div>
+        </div>
+      </article>
+    </section>
+    <!-- Section Ends Here-->
 
     <!-- Footer starts here -->
-    <footer >
-        <div id="footer">
+    <footer>
+      <div id="footer">
         <div id="footer_aside_2">
-            <ul>
-                <li>Home</li>
-                <li>Blog</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
+          <ul>
+            <li>Home</li>
+            <li>Blog</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
         </div>
         <div id="footer_aside_2">
-            <ul>
-                <li>Home</li>
-                <li>Blog</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
+          <ul>
+            <li>Home</li>
+            <li>Blog</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
         </div>
         <div id="footer_aside_2">
-            <ul>
-                <li>Home</li>
-                <li>Blog</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
+          <ul>
+            <li>Home</li>
+            <li>Blog</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
         </div>
         <div id="footer_aside_4">
-            <ul>
-                <div class="footer_article">
-                    <img src="google.png" alt="">
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
-                </div>
-                <div class="footer_article">
-                    <img src="google.png" alt="">
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
-                </div>
-                <div class="footer_article">
-                    <img src="google.png" alt="">
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
-                </div>
-                <div class="footer_article">
-                    <img src="google.png" alt="">
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae</li>
-                </div>
-            </ul>
+          <ul>
+            <div class="footer_article">
+              <img src="google.png" alt="" />
+              <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              </li>
+            </div>
+            <div class="footer_article">
+              <img src="google.png" alt="" />
+              <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              </li>
+            </div>
+            <div class="footer_article">
+              <img src="google.png" alt="" />
+              <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              </li>
+            </div>
+            <div class="footer_article">
+              <img src="google.png" alt="" />
+              <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              </li>
+            </div>
+          </ul>
         </div>
-    </div>
-        <div class="footer_2">
-            <p>Copyright - 2024</p>
-        </div>
+      </div>
+      <div class="footer_2">
+        <p>Copyright - 2024</p>
+      </div>
     </footer>
   </body>
 </html>
