--- a/Javascript/JS Animations - DOM Functionality Adding Interactivity/cr_del.html
+++ b/Javascript/JS Animations - DOM Functionality Adding Interactivity/cr_del.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Understanding DOM</title>
+    <title>CR DEL</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <button  >Submit</button>
-    <script src="Understanding_Dom.js"></script>
+
+    <script src="creatingDeletingElement.js"></script>
 </body>
 </html>
