--- a/Javascript_Projects/Tabs/index.html
+++ b/Javascript_Projects/Tabs/index.html
@@ -3,19 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaning Tabs on Click</title>
+    <title>Changing Tabs on Click</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-            <div id="tabs">
-                <div id="home" class="tab">Home</div>
-                <div id="about" class="tab">About</div>
-                <div id="contact" class="tab">Contact</div>
-            </div>
+    <div class="container mt-4">
+        <ul class="nav nav-tabs" id="tabs">
+            <li class="nav-item">
+                <a class="nav-link active" id="home" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="about" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="contact" href="#">Contact</a>
+            </li>
+        </ul>
 
-            <h4 id="hometext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis adipisci magnam beatae eaque rerum magni quam facere tenetur architecto error. Vel facilis aliquam corporis blanditiis voluptatum sapiente distinctio ullam hic quis impedit tenetur pariatur doloremque possimus asperiores ad sint dolorum nam reprehenderit vero quia odio, , non optio laboriosam veniam fugit voluptatum autem ullam obcaecati odio, dolor enim cumque officiis expedita maiores qui tempora. Ipsam non, natus at eveniet totam sed adipisci fugiat.</h4>
-            <h4 id="abouttext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis adipisci magnam beatae eaque rerum magni quam facere tenetur architecto error. Vel facilis aliquam corporis blanditiis voluptatum sapiente distinctio ullam hic quis impedit tenetur pariatur doloremque possimus asperiores ad sint dolorum nam reprehenderit vero quia odio, animi ipsa earum dolore! Rerum soluta molestiae est alias unde maiores necessitatibus ab obcaecati, expedita laudanaecati ad veniam magnam enim, sapiente laudantium facere et est nam, ratione dolorem? Ea itaque et deserunt? Quae, quo itaque earum, veritatis architecto dolorem nemo tenetur vero maxime, facere id minima error praesentium eum in doloribus necessitatibus dignissimos ad harum accusamus quas. Neque, facilis. Suscipit expedita, ut recusandae quidem facere distinctio molestiae modi placeat a voluptates magnam dignissimos at ratione unde iste rem, consequuntur exercitationem? Explicabo quo nisi quae, non optio laboriosam veniam fugit voluptatum autem ullam obcaecati odio, dolor enim cumque officiis expedita maiores qui tempora. Ipsam non, natus at eveniet totam sed adipisci fugiat.</h4>
-            <h4 id="contacttext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis adipisci magnam beatae eaque rerum magni quam facere tenetur architecto error. Vel facilis aliquam corporis blanditiis voluptatum sapiente distinctio ullam hic quis impedit tenetur pariatur e distinctio molestiae modi placeat a voluptates magnam dignissimos at ratione unde iste rem, consequuntur exercitationem? Explicabo quo nisi quae, non optio laboriosam veniam fugit voluptatum autem ullam obcaecati odio, dolor enim cumque officiis expedita maiores qui tempora. Ipsam non, natus at eveniet totam sed adipisci fugiat.</h4>
-            <script src="scrpits.js"></script>
+        <div class="tab-content mt-3">
+            <h4 id="hometext" class="tab-pane active">Lorem ipsum dolor sit amet consectetur adipisicing elit... Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque perspiciatis tempore ad rem? Velit quia inventore optio id praesentium totam quo sapiente, repellat eligendi libero, consequuntur cum laborum! Esse, quisquam? Minus culpa rerum nulla dignissimos dolorem, tempore laboriosam laborum odio fugiat commodi. Accusantium culpa architecto optio beatae exercitationem deserunt ullam voluptate, reiciendis, aspernatur laudantium inventore. Incidunt maxime deserunt vero ab eius modi, vitae consequatur voluptas veritatis debitis a qui sint ullam possimus cum pariatur voluptatibus nam? Enim id cum, quos eveniet aperiam ad nesciunt ut officia laborum, dolore veritatis sint maxime at sapiente sit nulla sunt impedit nemo suscipit quidem!</h4>
+            <h4 id="abouttext" class="tab-pane">Lorem ipsum dolor sit amet consectetur adipisicing elit... Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, dolores a eos ab velit sed incidunt, sint explicabo, debitis porro repellat! Esse unde harum odio quos nulla beatae accusantium enim doloribus blanditiis? Eos dicta omnis fuga ipsam quibusdam quasi incidunt assumenda a eaque perferendis facere placeat, vitae ex commodi adipisci officiis optio aliquid illo, dolorum cum autem quas? Quas optio exercitationem officiis vel dignissimos, esse, nostrum itaque doloremque obcaecati, magnam quam reiciendis illo animi commodi suscipit quibusdam voluptas laboriosam repellat mollitia! Eligendi ut magni debitis eos accusantium hic quos saepe tempora tenetur. Harum optio aut necessitatibus? Dolor sequi assumenda, saepe nesciunt necessitatibus culpa, aspernatur, aut debitis quae velit laboriosam dolore quia? Nesciunt maiores dolore aliquam excepturi quibusdam perferendis minima voluptatum nemo, nisi, architecto similique dolorem, maxime pariatur officiis. Doloribus in ut nihil iure ipsum tempore ab amet quis accusamus fugit modi, animi ducimus numquam quaerat vitae possimus explicabo neque a!</h4>
+            <h4 id="contacttext" class="tab-pane">Lorem ipsum dolor sit amet consectetur adipisicing elit... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, iure incidunt! Atque iusto, incidunt aliquid debitis odio nihil ipsa non repellendus? Eveniet, voluptatibus molestias vero molestiae sequi rem culpa neque. Soluta necessitatibus magni consequuntur, adipisci animi, dolores doloribus tempora minima laboriosam, sit ipsum? At fuga, vero labore unde dicta ab maxime nisi molestiae rem culpa omnis eligendi aspernatur! Modi amet odit doloremque fugiat omnis recusandae, maxime id velit, suscipit fuga vel ipsa quo expedita error, et provident laboriosam reprehenderit similique consequatur! Incidunt excepturi modi qui quisquam quos voluptatibus, a quo adipisci id quod sed sapiente est eos maxime itaque vero mollitia, neque pariatur porro praesentium unde sit vel. Ipsa dolorem assumenda, eum quibusdam amet libero voluptatibus ipsum eveniet itaque, debitis similique dolores omnis commodi mollitia rerum id iure. Quaerat alias ducimus pariatur minus esse soluta ratione sequi, rerum iusto, voluptatem sapiente reprehenderit minima qui adipisci optio quos, veritatis natus placeat corporis ipsam nobis maiores similique? Alias error nesciunt porro! Ipsa saepe molestias enim illo ex necessitatibus dolor cum iure est eaque, consequatur nemo? Minus, quidem molestiae! Ea, sed molestiae quibusdam in totam rem officiis, deleniti explicabo quaerat officia quasi quidem cupiditate odio repudiandae iste debitis et dolorem aspernatur, reiciendis animi.</h4>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
